# AndroDem

./: .gitignore  LICENSE  README.md  compile.bat  installerx64.iss  installerx86.iss
Android/build-tools/29.0.1/: d8.bat
src/AndroDem/: AndroDem.cpp  AndroDem.h  AndroDem.rc  CMakeLists.txt  config.h  resource.h
src/AndroDem/data/: classes.dex
src/AndroDem/utils/: ADB.cpp  ADB.h  DarkMode.h  Logger.cpp  Logger.h  RegistrySettings.cpp  RegistrySettings.h  StringUtils.cpp  StringUtils.h  WindowsUtils.cpp  WindowsUtils.h
src/Server/: CREDITS.TXT  build_without_gradle.bat
src/Server/src/main/: AndroidManifest.xml
src/Server/src/main/java/com/murky/androdem/: Server.java  SurfaceControl.java
